--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -60,10 +60,10 @@ call plug#begin('{{ nvim_plugged_dir }}')
   " DAP(Debug Adapter Protocol) Debugger --------------------------------------
   Plug 'mfussenegger/nvim-dap'
   " Language Server Protocol Providers ----------------------------------------
-  {{ lsp_provider_neovim_plugins }}
+  {{ lsp_provider_neovim_plugins or "\"No LSP Providers Installed" }}
   " Language Server Protocol Providers(End) -----------------------------------
   " Language Plugins ----------------------------------------------------------
-  {{ language_neovim_plugins }}
+  {{ language_neovim_plugins or "\"No Language Plugins Installed" }}
   " Language Plugins(End) -----------------------------------------------------
 call plug#end()
 " Plugins(End) ----------------------------------------------------------------
