More plugin configs.

--- a/templates/nvim/coc-settings.json.j2
+++ b/templates/nvim/coc-settings.json.j2
@@ -1,7 +1,8 @@
 {
     "diagnostic.displayByAle": true,
     "languageserver": {
-// LSP Provider(Begin)
-// LSP Provider(End)
+    // LSP Provider(Begin)
+    {{ lsp_provider_coc_settings or "// No LSP Providers Installed" }}
+    // LSP Provider(End)
     }
 }
