--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -60,10 +60,10 @@ call plug#begin('{{ nvim_plugged_dir }}')
   " DAP(Debug Adapter Protocol) Debugger --------------------------------------
   Plug 'mfussenegger/nvim-dap'
   " Language Server Protocol Providers ----------------------------------------
-  {{ lsp_provider_neovim_plugins or "\"No LSP Providers Installed" }}
+  {{ lsp_provider_neovim_plugins or "\" No LSP Providers Installed" }}
   " Language Server Protocol Providers(End) -----------------------------------
   " Language Plugins ----------------------------------------------------------
-  {{ language_neovim_plugins or "\"No Language Plugins Installed" }}
+  {{ language_neovim_plugins or "\" No Language Plugins Installed" }}
   " Language Plugins(End) -----------------------------------------------------
 call plug#end()
 " Plugins(End) ----------------------------------------------------------------
@@ -106,6 +106,7 @@ call plug#end()
   set cursorline
 " Line Numbers  ---------------------------------------------------------------
   set number relativenumber
+  command! ToggleHybridLineNumbers :set number! relativenumber!
 " augroup numbertoggle
 "   autocmd!
 "   autocmd BufEnter,FocusGained,InsertLeave * set relativenumber
@@ -381,71 +382,72 @@ call plug#end()
 " Telescope Settings ----------------------------------------------------------
   nmap <Leader>t [telescope-p]
   xmap <Leader>t [telescope-p]
-"lua <<EOF
-"    require('telescope').load_extension('coc')
-"EOF
-"  nnoremap <silent> gD :Telescope coc definitions<cr>
-"  nnoremap <silent> gd :Telescope coc declarations<cr>
-"  nnoremap <silent> gy :Telescope coc type_definitions<cr>
-"  nnoremap <silent> gi :Telescope coc implementations<cr>
-"  nnoremap <silent> gl :Telescope coc locations<cr>
-"  nnoremap <silent> g/ :Telescope coc document_symbols<cr>
-"  nnoremap <silent> gS :Telescope coc workspace_symbols<cr>
-"  nnoremap <silent> gr :Telescope coc references<cr>
-"  nnoremap <silent> gc :Telescope coc commands<cr>
+" lua <<EOF
+"     require('telescope').load_extension('coc')
+" EOF
+" nnoremap <silent> gD :Telescope coc definitions<cr>
+" nnoremap <silent> gd :Telescope coc declarations<cr>
+" nnoremap <silent> gy :Telescope coc type_definitions<cr>
+" nnoremap <silent> gi :Telescope coc implementations<cr>
+" nnoremap <silent> gl :Telescope coc locations<cr>
+" nnoremap <silent> g/ :Telescope coc document_symbols<cr>
+" nnoremap <silent> gS :Telescope coc workspace_symbols<cr>
+" nnoremap <silent> gr :Telescope coc references<cr>
+" nnoremap <silent> gc :Telescope coc commands<cr>
 " Telescope Settings(End) -----------------------------------------------------
 
 " Treesitter/Neorg Settings ---------------------------------------------------
-lua <<EOF
-    local parser_config = require "nvim-treesitter.parsers".get_parser_configs()
-    parser_config.norg = {
-        install_info = {
-            url = "https://github.com/nvim-neorg/tree-sitter-norg",
-            files = { "src/parser.c", "src/scanner.cc" },
-            branch = "main"
-        },
-    }
+  lua <<EOF
+      local parser_config = require "nvim-treesitter.parsers".get_parser_configs()
+      parser_config.norg = {
+          install_info = {
+              url = "https://github.com/nvim-neorg/tree-sitter-norg",
+              files = { "src/parser.c", "src/scanner.cc" },
+              branch = "main"
+          },
+      }
 
-    require'nvim-treesitter.configs'.setup {
-      highlight = {
-        enable = true,
-        disable = {},
-      },
-      ensure_installed = {
-        "norg",
-        "haskell",
-        "c",
-        "cpp",
-        "json",
-        "yaml",
-        "rust"
-      },
-    }
-EOF
-
-lua << EOF
-    require('neorg').setup {
-        -- Tell Neorg what modules to load
-        load = {
-            ["core.defaults"] = {}, -- Load all the default modules
-            ["core.norg.concealer"] = {}, -- Allows for use of icons
-            ["core.norg.dirman"] = { -- Manage your directories with Neorg
-                config = {
-                    workspaces = {
-                        my_workspace = "~/Code"
-                    }
-                }
-            }
+      require'nvim-treesitter.configs'.setup {
+        highlight = {
+          enable = true,
+          disable = {},
         },
-    }
-EOF
+        ensure_installed = {
+          "norg",
+          "haskell",
+          "c",
+          "cpp",
+          "json",
+          "yaml",
+          "rust"
+        },
+      }
+  EOF
+
+  lua << EOF
+      require('neorg').setup {
+          -- Tell Neorg what modules to load
+          load = {
+              ["core.defaults"] = {}, -- Load all the default modules
+              ["core.norg.concealer"] = {}, -- Allows for use of icons
+              ["core.norg.dirman"] = { -- Manage your directories with Neorg
+                  config = {
+                      workspaces = {
+                          my_workspace = "~/Code"
+                      }
+                  }
+              }
+          },
+      }
+  EOF
 " Treesitter/Neorg Settings(End) ----------------------------------------------
 
 " Neoformat Settings ----------------------------------------------------------
-let g:neoformat_enabled_shell = ['shfmt']
-let g:neoformat_enabled_yaml = ['prettier']
-let g:neoformat_enabled_json = ['prettier']
-let g:shfmt_opt="-ci"
+  let g:neoformat_enabled_shell = ['shfmt']
+  let g:neoformat_enabled_yaml = ['prettier']
+  let g:neoformat_enabled_json = ['prettier']
+  let g:shfmt_opt="-ci"
+  {{ neoformat_plugin_settings or "\" No Languages Configured for Formatting" }}
 " Neoformat Settings(End) -----------------------------------------------------
 
 " FZF Settings ----------------------------------------------------------------
@@ -590,15 +592,25 @@ let g:shfmt_opt="-ci"
   let g:startify_change_to_dir = 0
 " Startify Settings(End) ------------------------------------------------------
 
-" Vista Settings ----------------------------------------------------------------
+" Vista Settings --------------------------------------------------------------
   let g:vista_default_executive = 'coc'
+  function! NearestMethodOrFunction() abort
+    return get(b:, 'vista_nearest_method_or_function', '')
+  endfunction
+  set statusline+=%{NearestMethodOrFunction()}
+  autocmd VimEnter * call vista#RunForNearestMethodOrFunction()
 " nnoremap <silent> <C-_> :Vista finder lcn<CR>
-" Vista Settings(End) -----------------------------------------------------------
+" Vista Settings(End) ---------------------------------------------------------
+
+" DAP Settings ----------------------------------------------------------------
+  {{ dap_plugin_settings or "\" No DAP Languages Configured" }}
+" DAP Settings(End) -----------------------------------------------------------
 
 " ALE Settings ----------------------------------------------------------------
-let g:ale_lint_on_text_changed = 'never'
-let g:ale_lint_on_insert_leave = 0
-let g:ale_lint_on_enter = 0
+  let g:ale_lint_on_text_changed = 'never'
+  let g:ale_lint_on_insert_leave = 0
+  let g:ale_lint_on_enter = 0
+  {{ ale_plugin_settings or "\" No ALE Languages Configured" }}
 " ALE Settings(End) -----------------------------------------------------------
 
 " Sneak Settings --------------------------------------------------------------
@@ -611,4 +623,5 @@ let g:ale_lint_on_enter = 0
 " Sneak Settings(End) ---------------------------------------------------------
 
 " Extra Plugin Settings -------------------------------------------------------
+  {{ extra_plugin_settings: or "\" No Extra Language Plugins Configured" }}
 " Extra Plugin Settings(End) --------------------------------------------------
