Cleanup and fix jinja error.

--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -623,5 +623,5 @@ call plug#end()
 " Sneak Settings(End) ---------------------------------------------------------
 
 " Extra Plugin Settings -------------------------------------------------------
-  {{ extra_plugin_settings: or "\" No Extra Language Plugins Configured" }}
+  {{ extra_plugin_settings or "\" No Extra Language Plugins Configured" }}
 " Extra Plugin Settings(End) --------------------------------------------------
