Add extra zsh aliases.

--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -150,6 +150,7 @@ cdg() {
    fi
 }
 #export -f cdg > /dev/null
+{{ extra_zsh_aliases or "# No Extra Zsh Aliases Installed" }}
 # END: Aliases
 ###############################################################################
 
