--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -150,7 +150,7 @@ cdg() {
    fi
 }
 #export -f cdg > /dev/null
-{{ extra_zsh_aliases or "# No Extra Zsh Aliases Installed" }}
+{{ extra_zsh_aliases_file or "# No Extra Zsh Aliases Installed" }}
 # END: Aliases
 ###############################################################################
 
