--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -184,6 +184,10 @@ call plug#end()
 " endfor
 " Plugin Settings(End) --------------------------------------------------------
 
+" Plugin Lua Settings ---------------------------------------------------------
+  luafile {{ nvim_config_lua }}
+" Plugin Lua Settings(End) ----------------------------------------------------
+
 " DevIcons Settings -----------------------------------------------------------
   set encoding=utf8
 " adding to vim-airline's tabline 
@@ -382,64 +386,9 @@ call plug#end()
 " Telescope Settings ----------------------------------------------------------
   nmap <Leader>t [telescope-p]
   xmap <Leader>t [telescope-p]
-" lua <<EOF
-"     require('telescope').load_extension('coc')
-" EOF
-" nnoremap <silent> gD :Telescope coc definitions<cr>
-" nnoremap <silent> gd :Telescope coc declarations<cr>
-" nnoremap <silent> gy :Telescope coc type_definitions<cr>
-" nnoremap <silent> gi :Telescope coc implementations<cr>
-" nnoremap <silent> gl :Telescope coc locations<cr>
-" nnoremap <silent> g/ :Telescope coc document_symbols<cr>
-" nnoremap <silent> gS :Telescope coc workspace_symbols<cr>
-" nnoremap <silent> gr :Telescope coc references<cr>
-" nnoremap <silent> gc :Telescope coc commands<cr>
 " Telescope Settings(End) -----------------------------------------------------
 
 " Treesitter/Neorg Settings ---------------------------------------------------
-  lua <<EOF
-      local parser_config = require "nvim-treesitter.parsers".get_parser_configs()
-      parser_config.norg = {
-          install_info = {
-              url = "https://github.com/nvim-neorg/tree-sitter-norg",
-              files = { "src/parser.c", "src/scanner.cc" },
-              branch = "main"
-          },
-      }
-
-      require'nvim-treesitter.configs'.setup {
-        highlight = {
-          enable = true,
-          disable = {},
-        },
-        ensure_installed = {
-          "norg",
-          "haskell",
-          "c",
-          "cpp",
-          "json",
-          "yaml",
-          "rust"
-        },
-      }
-  EOF
-
-  lua << EOF
-      require('neorg').setup {
-          -- Tell Neorg what modules to load
-          load = {
-              ["core.defaults"] = {}, -- Load all the default modules
-              ["core.norg.concealer"] = {}, -- Allows for use of icons
-              ["core.norg.dirman"] = { -- Manage your directories with Neorg
-                  config = {
-                      workspaces = {
-                          my_workspace = "~/Code"
-                      }
-                  }
-              }
-          },
-      }
-  EOF
 " Treesitter/Neorg Settings(End) ----------------------------------------------
 
 " Neoformat Settings ----------------------------------------------------------
@@ -603,7 +552,6 @@ call plug#end()
 " Vista Settings(End) ---------------------------------------------------------
 
 " DAP Settings ----------------------------------------------------------------
-{{ dap_plugin_settings_file or "\" No DAP Languages Configured" }}
 " DAP Settings(End) -----------------------------------------------------------
 
 " ALE Settings ----------------------------------------------------------------
