Cleanup code checkout paths.

--- a/templates/cdg_paths.j2
+++ b/templates/cdg_paths.j2
@@ -1,4 +1,4 @@
 {{ extra_bookmarks_file or dotfiles_user_home }}
 {{ dotfiles_user_home }}/bonhommelab
 {{ nvim_config_dir }}
-{{ code_checkout_path }}/github.com/pbonh
+{{ code_checkout_path_github }}
