--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -47,6 +47,7 @@ call plug#begin('{{ nvim_plugged_dir }}')
   Plug 'junegunn/fzf.vim'
   Plug 'voldikss/fzf-floaterm'
   Plug 'voldikss/vim-floaterm'
+  Plug 'akinsho/toggleterm.nvim'
   " Syntax Highlighting -------------------------------------------------------
   Plug 'vim-scripts/bnf.vim'
   Plug 'vim-scripts/ebnf.vim'
@@ -248,22 +249,26 @@ call plug#end()
   let g:floaterm_autoclose = 1
   let g:floaterm_autoinsert = v:true
   let g:floaterm_opener = 'edit'
-  let g:floaterm_keymap_toggle = '<C-\>'
+" let g:floaterm_keymap_toggle = '<C-\>'
   nnoremap <C-s> :FloatermNew<cr>
   command! FloatermLazygit :FloatermNew lazygit
   command! FloatermRanger :FloatermNew ranger
   command! FloatermBroot :FloatermNew broot
-  nnoremap <silent> <leader>g :FloatermLazygit<CR>
-  nnoremap <silent> <leader>r :FloatermRanger<CR>
-  nnoremap <silent> <leader>b :FloatermBroot<CR>
   hi FloatermBorder guibg=gray guifg=orange
   hi FloatermNC guibg=gray
-  nnoremap <leader>s :Floaterms<cr>
-  xnoremap <leader>s :Floaterms<cr>
+  nmap <Leader>s [floaterm-p]
+  xmap <Leader>s [floaterm-p]
+  nnoremap <silent> [floaterm-p]s :Floaterms<cr>
+  nnoremap <silent> [floaterm-p]g :FloatermLazygit<CR>
+  nnoremap <silent> [floaterm-p]r :FloatermRanger<CR>
+  nnoremap <silent> [floaterm-p]b :FloatermBroot<CR>
   let g:fzf_floaterm_newentries = {
     \ '+lazygit' : {
       \ 'title': 'Lazygit',
       \ 'cmd': '{{ nix_bin }}/lazygit' },
+    \ '+grv' : {
+      \ 'title': 'GRV',
+      \ 'cmd': '{{ nix_bin }}/grv' },
     \ '+zsh' : {
       \ 'title': 'Zsh Shell',
       \ 'cmd': '{{ nix_bin }}/zsh' },
