Re-enable floaterm shortcut.

--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -249,7 +249,7 @@ call plug#end()
   let g:floaterm_autoclose = 1
   let g:floaterm_autoinsert = v:true
   let g:floaterm_opener = 'edit'
-" let g:floaterm_keymap_toggle = '<C-\>'
+  let g:floaterm_keymap_toggle = '<C-\>'
   command! FloatermLazygit :FloatermNew lazygit
   command! FloatermRanger :FloatermNew ranger
   command! FloatermBroot :FloatermNew broot
