Add command/shortcut for splitting toggleterm.

--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -285,6 +285,7 @@ call plug#end()
 " Floaterm Settings(End) ------------------------------------------------------
 
 " Toggleterm Settings -----------------------------------------------------------
+  nnoremap <silent> [floaterm-p]/ :2ToggleTerm<cr>
   nnoremap <silent> [floaterm-p]x :ToggleTerm size=20 direction=horizontal<cr>
   nnoremap <silent> [floaterm-p]v :ToggleTerm size=80 direction=vertical<cr>
 " Toggleterm Settings(End) ------------------------------------------------------
