Add nvim-dap-ui plugin.

--- a/templates/nvim/config.lua.j2
+++ b/templates/nvim/config.lua.j2
@@ -141,6 +141,7 @@ require('neorg').setup {
 }
 
 -- DAP Settings
+require("dapui").setup()
 {{ dap_plugin_settings_file or "-- No DAP Languages Configured" }}
 
 -- Extra Plugin Settings
