--- a/templates/nvim/config.lua.j2
+++ b/templates/nvim/config.lua.j2
@@ -10,9 +10,7 @@ require'fzf-lua'.setup {
     },
     bat = {
       cmd             = "{{ nix_bin }}/bat",
-      args            = "--style=numbers,changes --color always",
-      theme           = 'Coldark-Dark', -- bat preview theme (bat --list-themes)
-      config          = nil,            -- nil uses $BAT_CONFIG_PATH
+      args            = "--color=always --style=numbers --line-range=:500 {}",
     },
   },
   -- provider setup
