Remove line range from fzf-lua bat config.

--- a/templates/nvim/config.lua.j2
+++ b/templates/nvim/config.lua.j2
@@ -10,7 +10,7 @@ require'fzf-lua'.setup {
     },
     bat = {
       cmd             = "{{ nix_bin }}/bat",
-      args            = "--color=always --style=numbers --line-range=:500 {}",
+      args            = "--color=always --style=numbers --line-range=:500",
     },
   },
   -- provider setup
