Add shortcut for vista.

--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -568,6 +568,7 @@ call plug#end()
   set statusline+=%{NearestMethodOrFunction()}
   autocmd VimEnter * call vista#RunForNearestMethodOrFunction()
 " nnoremap <silent> <C-_> :Vista finder lcn<CR>
+  nnoremap <silent> <leader>v :Vista!!<CR>
 " Vista Settings(End) ---------------------------------------------------------
 
 " DAP Settings ----------------------------------------------------------------
