--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -591,6 +591,7 @@ call plug#end()
 " ALE Settings(End) -----------------------------------------------------------
 
 " Sneak Settings --------------------------------------------------------------
+  let g:sneak#label = 1
   map s <Plug>Sneak_s
   map S <Plug>Sneak_S
   map f <Plug>Sneak_f
