--- a/templates/git/gitconfig.j2
+++ b/templates/git/gitconfig.j2
@@ -1,11 +1,12 @@
 [user]
 	email = {{ git_email }}
 	name = {{ git_name }}
-	
+
 [core]
 	ui = auto
 	editor = {{ nix_bin }}/nvim
-	
+	excludesfile = {{ dotfiles_user_home }}/.gitignore
+
 [pager]
 	diff = {{ nix_bin }}/delta
 	log = {{ nix_bin }}/delta
