Add session manager.

--- a/templates/nvim/config.lua.j2
+++ b/templates/nvim/config.lua.j2
@@ -126,6 +126,17 @@ require('neorg').setup {
   },
 }
 
+-- Auto-Session Settings
+-- require('auto-session').setup {
+--     auto_session_enable_last_session=true,
+-- }
+vim.o.sessionoptions="blank,buffers,curdir,folds,help,options,tabpages,winsize,resize,winpos,terminal"
+require('session-lens').setup {
+  path_display = {'shorten'},
+  previewer = true
+}
+require("telescope").load_extension("session-lens")
+
 -- DAP Settings
 require("dapui").setup()
 {{ dap_plugin_settings_file or "-- No DAP Languages Configured" }}
