--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -53,6 +53,9 @@ call plug#begin('{{ nvim_plugged_dir }}')
   Plug 'ibhagwan/fzf-lua'
   Plug 'vijaymarupudi/nvim-fzf'
   Plug 'kyazdani42/nvim-web-devicons'
+  " Session Management --------------------------------------------------------
+  Plug 'rmagatti/auto-session'
+  Plug 'rmagatti/session-lens'
   " Syntax Highlighting -------------------------------------------------------
   Plug 'vim-scripts/bnf.vim'
   Plug 'vim-scripts/ebnf.vim'
@@ -404,6 +407,10 @@ call plug#end()
   nmap <Leader>t [telescope-p]
   xmap <Leader>t [telescope-p]
 " Telescope Settings(End) -----------------------------------------------------
+
+" Auto-Session Settings -------------------------------------------------------
+  nnoremap <silent> [telescope-p]s :SearchSession<CR>
+" Auto-Session Settings(End) --------------------------------------------------
 
 " Treesitter/Neorg Settings ---------------------------------------------------
 " Treesitter/Neorg Settings(End) ----------------------------------------------
