--- a/templates/direnvrc.j2
+++ b/templates/direnvrc.j2
@@ -6,7 +6,7 @@ export_alias() {
   local target="$alias_dir/$name"
   mkdir -p "$alias_dir"
   PATH_add "$alias_dir"
-  echo "#!/usr/bin/env bash -e" > "$target"
+  echo "#!/usr/bin/env bash" > "$target"
   echo "$@" >> "$target"
   chmod +x "$target"
 }
