Add default neorg keybindings.

--- a/templates/nvim/config.lua.j2
+++ b/templates/nvim/config.lua.j2
@@ -115,6 +115,12 @@ require('neorg').setup {
   -- Tell Neorg what modules to load
   load = {
       ["core.defaults"] = {}, -- Load all the default modules
+      ["core.keybinds"] = {
+          config = {
+              default_keybinds = true,
+              neorg_leader = "<Leader>o"
+          }
+      },
       ["core.norg.concealer"] = {}, -- Allows for use of icons
       ["core.norg.dirman"] = { -- Manage your directories with Neorg
           config = {
