--- a/templates/nvim/config.lua.j2
+++ b/templates/nvim/config.lua.j2
@@ -125,7 +125,7 @@ require('neorg').setup {
       ["core.norg.dirman"] = { -- Manage your directories with Neorg
           config = {
               workspaces = {
-                  my_workspace = "{{ code_checkout_path }}"
+                  my_workspace = "{{ code_checkout_path }}/neorg"
               }
           }
       }
