--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -612,8 +612,8 @@ call plug#end()
 " Sneak Settings(End) ---------------------------------------------------------
 
 " Hop Settings ----------------------------------------------------------------
-  nnoremap <silent> , :HopWord<CR>
-  nnoremap <silent> , :HopWord<CR>
+  nmap , :HopWord<CR>
+  vmap , :HopWord<CR>
 " Hop Settings(End) -----------------------------------------------------------
 
 " Extra Plugin Settings -------------------------------------------------------
