--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -610,6 +610,7 @@ call plug#end()
   map F <Plug>Sneak_F
   map t <Plug>Sneak_t
   map T <Plug>Sneak_T
+  map <Bslash> <Plug>Sneak_
 " Sneak Settings(End) ---------------------------------------------------------
 
 " Hop Settings ----------------------------------------------------------------
