--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -610,10 +610,13 @@ call plug#end()
   map F <Plug>Sneak_F
   map t <Plug>Sneak_t
   map T <Plug>Sneak_T
-  map <Bslash> <Plug>Sneak_,
+" map <Bslash> <Plug>Sneak_,
+  map \ <Plug>Sneak_,
 " Sneak Settings(End) ---------------------------------------------------------
 
 " Hop Settings ----------------------------------------------------------------
+  nmap , :HopWord<CR>
+  vmap , :HopWord<CR>
 " Hop Settings(End) -----------------------------------------------------------
 
 " Extra Plugin Settings -------------------------------------------------------
