Add startify bookmarks.

--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -565,13 +565,16 @@ call plug#end()
           \ {'b': ['Broot File Manager', 'FloatermNew broot']},
           \ {'r': ['Ranger File Manager', 'FloatermNew ranger']},
           \ {'g': ['Lazygit Viewer', 'FloatermNew lazygit']},
-          \ {'t': ['Launch Shell', 'Tnew']},
+          \ {'t': ['Launch Shell', 'FloatermNew']},
           \ {'pi': ['Install Plugins', 'PlugInstall']},
           \ {'pc': ['Clean Plugins', 'PlugClean']},
           \ {'pu': ['Update Plugins', 'PlugUpdate']},
           \ ]
-  let g:startify_change_to_vcs_root = 1
+  let g:startify_change_to_vcs_root = 0
   let g:startify_change_to_dir = 0
+  let g:startify_bookmarks = [
+          {{ extra_bookmarks_startify }}
+          \ ]
 " Startify Settings(End) ------------------------------------------------------
 
 " Vista Settings --------------------------------------------------------------
