Disable auto-session, fix default.

--- a/templates/nvim/config.lua.j2
+++ b/templates/nvim/config.lua.j2
@@ -136,12 +136,12 @@ require('neorg').setup {
 -- require('auto-session').setup {
 --     auto_session_enable_last_session=true,
 -- }
-vim.o.sessionoptions="blank,buffers,curdir,folds,help,options,tabpages,winsize,resize,winpos,terminal"
-require('session-lens').setup {
-  path_display = {'shorten'},
-  previewer = true
-}
-require("telescope").load_extension("session-lens")
+-- vim.o.sessionoptions="blank,buffers,curdir,folds,help,options,tabpages,winsize,resize,winpos,terminal"
+-- require('session-lens').setup {
+--   path_display = {'shorten'},
+--   previewer = true
+-- }
+-- require("telescope").load_extension("session-lens")
 
 -- Hop Settings
 require'hop'.setup()
