--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -61,8 +61,8 @@ call plug#begin('{{ nvim_plugged_dir }}')
   Plug 'vijaymarupudi/nvim-fzf'
   Plug 'kyazdani42/nvim-web-devicons'
   " Session Management --------------------------------------------------------
-  Plug 'rmagatti/auto-session'
-  Plug 'rmagatti/session-lens'
+" Plug 'rmagatti/auto-session'
+" Plug 'rmagatti/session-lens'
   " Syntax Highlighting -------------------------------------------------------
   Plug 'vim-scripts/bnf.vim'
   Plug 'vim-scripts/ebnf.vim'
@@ -413,7 +413,7 @@ call plug#end()
 " Telescope Settings(End) -----------------------------------------------------
 
 " Auto-Session Settings -------------------------------------------------------
-  nnoremap <silent> [telescope-p]s :SearchSession<CR>
+" nnoremap <silent> [telescope-p]s :SearchSession<CR>
 " Auto-Session Settings(End) --------------------------------------------------
 
 " Treesitter/Neorg Settings ---------------------------------------------------
