--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -573,7 +573,7 @@ call plug#end()
   let g:startify_change_to_vcs_root = 0
   let g:startify_change_to_dir = 0
   let g:startify_bookmarks = [
-          {{ extra_bookmarks_startify }}
+          \ {{ extra_bookmarks_startify }}
           \ ]
 " Startify Settings(End) ------------------------------------------------------
 
