--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -572,9 +572,7 @@ call plug#end()
           \ ]
   let g:startify_change_to_vcs_root = 0
   let g:startify_change_to_dir = 0
-  let g:startify_bookmarks = [
-          \ {{ extra_bookmarks_startify }}
-          \ ]
+  let g:startify_bookmarks = {{ extra_bookmarks_startify or "[]" }}
 " Startify Settings(End) ------------------------------------------------------
 
 " Vista Settings --------------------------------------------------------------
