--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -560,7 +560,14 @@ call plug#end()
 " UltiSnips Settings(End) ------------------------------------------------------
 
 " Startify Settings -----------------------------------------------------------
-  let g:startify_list_order = [ 'bookmarks', 'files', 'dir', 'commands', 'sessions' ]
+" let g:startify_list_order = [ 'bookmarks', 'files', 'dir', 'commands', 'sessions' ]
+  let g:startify_lists = [
+        \ { 'type': 'bookmarks', 'header': ['   Bookmarks']      },
+        \ { 'type': 'files',     'header': ['   MRU']            },
+        \ { 'type': 'dir',       'header': ['   MRU '. getcwd()] },
+        \ { 'type': 'commands',  'header': ['   Commands']       },
+        \ { 'type': 'sessions',  'header': ['   Sessions']       },
+        \ ]
   let g:startify_commands = [
           \ {'b': ['Broot File Manager', 'FloatermNew broot']},
           \ {'r': ['Ranger File Manager', 'FloatermNew ranger']},
