Tweak startify options.

--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -577,8 +577,10 @@ call plug#end()
           \ {'pc': ['Clean Plugins', 'PlugClean']},
           \ {'pu': ['Update Plugins', 'PlugUpdate']},
           \ ]
-  let g:startify_change_to_vcs_root = 0
+  let g:startify_session_autoload = 0
+  let g:startify_change_to_vcs_root = 1
   let g:startify_change_to_dir = 0
+  let g:startify_relative_path = 1
   let g:startify_bookmarks = [{{ extra_bookmarks_startify }}]
 " Startify Settings(End) ------------------------------------------------------
 
