--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -581,6 +581,7 @@ call plug#end()
   let g:startify_change_to_vcs_root = 1
   let g:startify_change_to_dir = 0
   let g:startify_relative_path = 1
+  let g:startify_change_cmd = 'cd'
   let g:startify_bookmarks = [{{ extra_bookmarks_startify }}]
 " Startify Settings(End) ------------------------------------------------------
 
